# atomic-indirect

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
shaders/: drawTriangles.frag  drawTriangles.vert  dynTriangles.comp  genTriangles.comp
src/: main.cpp  shader.hpp
